<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.android.ledgerbook.ui.widgets.CustomButton
        android:id="@+id/btnCreate"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_my_payment_payment_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/view_bigger_vertical_margin"
        android:paddingBottom="@dimen/view_bigger_vertical_margin"
        app:layout_constraintBottom_toBottomOf="@id/btnCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_big_horizontal_margin"
            android:paddingRight="@dimen/activity_big_horizontal_margin"
            >

            <com.android.ledgerbook.ui.widgets.CustomTextView
                style="@style/BoldBodyBigTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_your_payment_book"
                />

            <com.android.ledgerbook.ui.widgets.CustomTextView
                style="@style/BodyInstructionDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_small_vertical_margin5"
                android:text="@string/fill_up_the_basic_details"
                />

            <com.android.ledgerbook.ui.widgets.CustomInputBox
                android:id="@+id/ibOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_bigger_vertical_margin"
                app:IbTitle="@string/full_name"
                >

                <com.android.ledgerbook.ui.widgets.CustomTextInput
                    style="@style/IbData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:validatorType="mandatory"
                    tool:text="Rohit Sharma"
                    />

            </com.android.ledgerbook.ui.widgets.CustomInputBox>

            <com.android.ledgerbook.ui.widgets.CustomInputBox
                android:id="@+id/ibBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_big_vertical_margin"
                app:IbTitle="@string/business_name"
                >

                <com.android.ledgerbook.ui.widgets.CustomTextInput
                    style="@style/IbData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:validatorType="mandatory"
                    tool:text="D-Mart"
                    />

            </com.android.ledgerbook.ui.widgets.CustomInputBox>

            <com.android.ledgerbook.ui.widgets.CustomInputBox
                android:id="@+id/ibEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_big_vertical_margin"
                app:IbTitle="@string/email_address"
                >

                <com.android.ledgerbook.ui.widgets.CustomTextInput
                    style="@style/IbData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:validatorType="email"
                    tool:text="rohits@gmail.com"
                    />

            </com.android.ledgerbook.ui.widgets.CustomInputBox>

            <com.android.ledgerbook.ui.widgets.CustomInputBox
                android:id="@+id/ibBusinessAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_big_vertical_margin"
                app:IbTitle="@string/business_address"
                >

                <com.android.ledgerbook.ui.widgets.CustomTextInput
                    style="@style/IbData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:validatorType="email"
                    tool:text="Nahar Amrit Shakti"
                    />

            </com.android.ledgerbook.ui.widgets.CustomInputBox>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>